RenderTextHarfBuzz: Improve cache performance

Avoid checking the full input |text| string, rather, only examine the
part that sits inside |range| and its adjacent context. Note that we
still need the full string (or at least we need to know the offset
into it that we are using), because that will affect the output.

Pre-compute the input hash, to avoid re-computing a string's hash at
every comparison.

Add comments regarding key hash computation and thread use, and mark
members as const (requested in previous patch's review).

Bug: 860612
Change-Id: I9dd73e0a2d0247a7139131edfb33b3d99138b103
Reviewed-on: https://chromium-review.googlesource.com/1130159
Commit-Queue: ccameron <ccameron@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574092}
Former-commit-id: 2228dce400e0743b6dd1f59205e03e0e2aaee145